@@ -8,3 +8,7 @@ dependencies {
 tasks.test {
 	useJUnitPlatform()
 }
+
+tasks.withType<JavaCompile>().configureEach {
+	options.compilerArgs.add("--enable-preview")
+}
